dynamic search by category

--- a/angular/src/app/components/product-list/product-list.component.html
+++ b/angular/src/app/components/product-list/product-list.component.html
@@ -26,6 +26,8 @@
 
  <div class="main-content">
   <div class="section-content section-content-p30">
+    <h2>Category: {{currentCategoryName}}</h2>
+    <hr>
     <div class="container-fluid">
       <div class="row">
         <!-- loop over the collection of products -->
