--- a/angular/src/app/components/product-list/product-list.component.html
+++ b/angular/src/app/components/product-list/product-list.component.html
@@ -24,24 +24,27 @@
   </tbody>
  </table> -->
 
- <div class="main-content">
+<div class="main-content">
   <div class="section-content section-content-p30">
     <h2>Category: {{currentCategoryName}}</h2>
     <hr>
     <div class="container-fluid">
       <div class="row">
         <!-- loop over the collection of products -->
-         <div class="col-md-3" *ngFor="let tempProduct of products">
-            <div class="product-box">
-              <img class="img-responsive" src="{{tempProduct.imageUrl}}" alt="product image" height="50">
-              <h1>{{tempProduct.name}}</h1>
-              <div class="price">{{tempProduct.unitPrice | currency:'USD'}}</div>
-              <a href="#" class="primary-btn">Add to Cart</a>
-            </div>
-
+        <div class="col-md-3" *ngFor="let tempProduct of products">
+          <div class="product-box">
+            <img class="img-responsive" src="{{tempProduct.imageUrl}}" alt="product image" height="50">
+            <h1>{{tempProduct.name}}</h1>
+            <div class="price">{{tempProduct.unitPrice | currency:'USD'}}</div>
+            <a href="#" class="primary-btn">Add to Cart</a>
+          </div>
+        </div>
+        <!-- if products is empty then display a message -->
+         <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+          No Products Found.
          </div>
       </div>
     </div>
 
   </div>
- </div>
+</div>
