--- a/angular/src/app/components/product-list/product-list.component.html
+++ b/angular/src/app/components/product-list/product-list.component.html
@@ -33,8 +33,12 @@
         <!-- loop over the collection of products -->
         <div class="col-md-3" *ngFor="let tempProduct of products">
           <div class="product-box">
-            <img class="img-responsive" src="{{tempProduct.imageUrl}}" alt="product image" height="50">
-            <h1>{{tempProduct.name}}</h1>
+            <a routerLink="/products/{{tempProduct.id}}">
+              <img class="img-responsive" src="{{tempProduct.imageUrl}}" alt="product image" height="50">
+            </a>
+            <a routerLink="/products/{{tempProduct.id}}">
+              <h1>{{tempProduct.name}}</h1>
+            </a>
             <div class="price">{{tempProduct.unitPrice | currency:'USD'}}</div>
             <a href="#" class="primary-btn">Add to Cart</a>
           </div>
