--- a/angular/src/app/components/product-list/product-list.component.html
+++ b/angular/src/app/components/product-list/product-list.component.html
@@ -40,7 +40,7 @@
               <h1>{{tempProduct.name}}</h1>
             </a>
             <div class="price">{{tempProduct.unitPrice | currency:'USD'}}</div>
-            <a href="#" class="primary-btn">Add to Cart</a>
+            <button class="btn btn-primary btn-sm" (click)="addToCart(tempProduct)">Add to Cart</button>
           </div>
         </div>
         <!-- if products is empty then display a message -->
